--- a/doctorsgonovski/public/mix-manifest.json
+++ b/doctorsgonovski/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=71150271bbd3c881829048d3cda1c01c",
-    "/css/app.css": "/css/app.css?id=e5aa7268c026f95bd20c53f08f57ed3a"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
