--- a/doctorsgonovski/package.json
+++ b/doctorsgonovski/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
+        "jquery-ui": "^1.13.2",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.5",
         "resolve-url-loader": "^5.0.0",
@@ -19,8 +20,10 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.2",
         "animate.css": "^4.1.1",
         "bootstrap": "^5.3.1",
+        "fontawesome-free": "^1.0.4",
         "jquery": "^3.7.0",
         "owl.carousel": "^2.3.4",
         "sass": "^1.64.2",
