some changes on blades

--- a/doctorsgonovski/public/mix-manifest.json
+++ b/doctorsgonovski/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=d22b03367b5566d290b74e7a5b36c6e3",
+    "/css/app.css": "/css/app.css?id=f41cb309208dff4fae1b76e739ebd4f4"
 }
